main/default/objects/Participant_Milestone__c/Participant_Milestone__c.object-meta.xml
<CustomObject>
    <description>All milestones of participants</description>
    <label>Participant Milestone</label>
    <nameField>
        <displayFormat>PM-{0000000}</displayFormat>
        <label>Participant Milestone Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>