main/default/objects/Participant_Milestone__c/fields/Checkpoint_Name__c.field-meta.xml
<CustomField>
    <fullName>Checkpoint_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to Checkpoint</description>
    <label>Checkpoint Name</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Participant Milestones (Checkpoint Name)</relationshipLabel>
    <relationshipName>Checkpoints</relationshipName>
    <type>Lookup</type>
</CustomField>