main/default/objects/Participant_Milestone__c/fields/Checkpoint_Progress__c.field-meta.xml
<CustomField>
    <fullName>Checkpoint_Progress__c</fullName>
    <description>Checkpoint progress</description>
    <label>Checkpoint Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>