main/default/objects/Participant_Milestone__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participant Milestones</relationshipLabel>
    <relationshipName>Participant_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>