main/default/objects/Participant_Milestone__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description</description>
    <label>Journey Milestone Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>