main/default/objects/Participant_Milestone__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Event End Date</description>
    <label>Milestone End Date</label>
    <type>Date</type>
</CustomField>