main/default/objects/Participant_Milestone__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to Event</description>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Participant Milestones</relationshipLabel>
    <relationshipName>Participant_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>