main/default/objects/Participant_Milestone__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates active record</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>