main/default/objects/Participant_Milestone__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <description>Links to Journey Participant</description>
    <label>Participant</label>
    <referenceTo>Journey_Participant__c</referenceTo>
    <relationshipLabel>Participant Milestones</relationshipLabel>
    <relationshipName>Participant_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>