main/default/objects/Participant_Milestone__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to Milestone</description>
    <label>Journey Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Participant Milestones</relationshipLabel>
    <relationshipName>Participant_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>