main/default/objects/Participant_Milestone__c/fields/Milestone_Completed__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the completion of the Participant Milestone based on the End Date.</description>
    <label>Milestone Completed</label>
    <type>Checkbox</type>
</CustomField>