main/default/objects/Participant_Milestone__c/fields/Milestone_Progress__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Progress__c</fullName>
    <description>Tracks the Milestone Progress</description>
    <formula>IF(Total_Catchup_Metrics__c = 0, (Total_Completed_Metrics__c / Total_Number_Of_Metrics__c), 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>