main/default/objects/Participant_Milestone__c/fields/Milestone_Started__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Participant Milestone has started</description>
    <label>Milestone Started</label>
    <type>Checkbox</type>
</CustomField>