main/default/objects/Participant_Milestone__c/fields/Milestone_Status__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Status__c</fullName>
    <description>Determines the current status of the milestone</description>
    <formula>IF(Total_Completed_Metrics__c =  Total_Number_Of_Metrics__c , &quot;Completed&quot;, 
IF(AND(TODAY()&gt; End_Date__c,   Total_Completed_Metrics__c &lt;  Total_Number_Of_Metrics__c ), &quot;Missed&quot;, 
IF(AND(TODAY() &gt;= Start_Date__c,TODAY() &lt;= End_Date__c, Total_Completed_Metrics__c &lt;  Total_Number_Of_Metrics__c ), &quot;On-Going&quot;, 
IF(TODAY() &lt; Start_Date__c, &quot;Upcoming&quot;,&quot;&quot;

) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Status</label>
    <type>Text</type>
</CustomField>