main/default/objects/Participant_Milestone__c/fields/Parent_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Parent_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Milestone__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Milestone__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Milestone</value>
        </filterItems>
        <filterItems>
            <field>Milestone__c.Journey__c</field>
            <operation>equals</operation>
            <valueField>Milestone__c.Journey__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Participant Milestones (Parent Milestone)</relationshipLabel>
    <relationshipName>Milestones_Checkpoints1</relationshipName>
    <type>Lookup</type>
</CustomField>