main/default/objects/Participant_Milestone__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <description>Tracks the Milestone Progress</description>
    <formula>IF( Checkpoint__c , Checkpoint_Progress__c ,  Milestone_Progress__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>