main/default/objects/Participant_Milestone__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Event Start Date</description>
    <label>Milestone Start Date</label>
    <type>Date</type>
</CustomField>