main/default/objects/Participant_Milestone__c/fields/System_Generated__c.field-meta.xml
<CustomField>
    <fullName>System_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates system generated record</description>
    <label>System Generated</label>
    <type>Checkbox</type>
</CustomField>