main/default/objects/Participant_Milestone__c/fields/Total_Catchup_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Total_Catchup_Metrics__c</fullName>
    <label>Total Catchup Metrics</label>
    <summaryFilterItems>
        <field>Participant_Milestone_Metric__c.Metric_Used__c</field>
        <operation>equals</operation>
        <value>Catch-Up Date</value>
    </summaryFilterItems>
    <summaryForeignKey>Participant_Milestone_Metric__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>