main/default/objects/Participant_Milestone__c/fields/Total_Completed_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed_Metrics__c</fullName>
    <description>Total Number of metrics based on Milestone Type</description>
    <label>Total Completed Metrics</label>
    <summaryFilterItems>
        <field>Participant_Milestone_Metric__c.Completion_Date__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Participant_Milestone_Metric__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>