main/default/objects/Participant_Milestone__c/fields/Total_Number_Of_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Metrics__c</fullName>
    <description>Total Number of Metrics based on Milestone Type</description>
    <label>Total Number Of Metrics</label>
    <summaryForeignKey>Participant_Milestone_Metric__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>